--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .grpo_llama3.2_finetuned
 .ipynb_checkpoints
 .keyterm/.ipynb_checkpoints
-.fine_tune/large_dataset/fine_tune model
-.fine_tune/large_dataset/fine_tune model2
-.fine_tune/large_dataset/results
+fine_tune/large_dataset/fine_tune model/
+fine_tune/large_dataset/fine_tune model2/
+fine_tune/large_dataset/qween_fine_tune/
+fine_tune/large_dataset/qween_fine_tune2/
+fine_tune/large_dataset/results/
