--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ fine_tune/large_dataset/fine_tune model2/
 fine_tune/large_dataset/qween_fine_tune/
 fine_tune/large_dataset/qween_fine_tune2/
 fine_tune/large_dataset/results/
+fine_tune/large_dataset/dataset.csv
