--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ fine_tune/large_dataset/qween_fine_tune/
 fine_tune/large_dataset/qween_fine_tune2/
 fine_tune/large_dataset/results/
 fine_tune/large_dataset/dataset.csv
+fine_tune
