--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ fine_tune/large_dataset/qween_fine_tune2/
 fine_tune/large_dataset/results/
 fine_tune/large_dataset/dataset.csv
 fine_tune
+results
